--- a/app/views/enforcement-listed-building/v1/named-on-notice/person-name.html
+++ b/app/views/enforcement-listed-building/v1/named-on-notice/person-name.html
@@ -58,7 +58,7 @@
           <input class="govuk-input govuk-input--width-20" id="enforcement-last-name" name="enforcement-last-name" type="text" spellcheck="false" autocomplete="family-name">
         </div>
 
-      </<fieldset>
+      </fieldset>
 
       <div class="govuk-button-group">
 
