--- a/app/views/enforcement-listed-building/v1/named-on-notice/added-names.html
+++ b/app/views/enforcement-listed-building/v1/named-on-notice/added-names.html
@@ -24,101 +24,56 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <span class="govuk-caption-l">
+      Tell us who was on the enforcement notice
+    </span>
+    <h1 class="govuk-heading-l">
+      {{ title }}
+    </h1>
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+      {% for name in data['names'] %}
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key govuk-!-width-one-quarter">
+            {{ name.type | capitalize or 'Person' }}
+          </dt>
+          <dd class="govuk-summary-list__value  govuk-!-width-one-half">
+            {{ name.name }}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="#0">
+              Change
+            </a>
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="#0">
+              Remove
+            </a>
+          </dd>
+        </div>
+      {% else %}
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key govuk-!-width-one-quarter">
+            Person
+          </dt>
+          <dd class="govuk-summary-list__value  govuk-!-width-one-half">
+            Nic Davies
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="#0">
+              Change<span class="govuk-visually-hidden"> this person</span>
+            </a>
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="#0">
+              Remove<span class="govuk-visually-hidden"> this person</span>
+            </a>
+          </dd>
+        </div>
+      {% endfor %}
+    </dl>
+
     <form method="post">
-
-      <span class="govuk-caption-l">
-        Tell us who was on the enforcement notice
-      </span>
-
-      <h1 class="govuk-heading-l">
-        {{ title }}
-      </h1>
-
-      <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-
-        <!-- person if one is named -->
-        {% if data['enforcement-first-name'] %}
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-!-width-one-quarter">
-              Individual
-            </dt>
-            <dd class="govuk-summary-list__value  govuk-!-width-one-half">
-              {{ data["enforcement-first-name"] }}
-              {{ data["enforcement-last-name"] }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="confirm-remove?entity=person">
-                Remove<span class="govuk-visually-hidden"> this person</span>
-              </a>
-            </dd>
-          </div>
-        {% elseif data['enforcement-company-name'] %}
-
-        {% else %}
-          <!-- no data defaults -->
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-!-width-one-quarter">
-              {% if data['enforcement-identity'] == 'person' %}
-                Person
-              {% else %}
-                Company
-              {% endif %}
-            </dt>
-            <dd class="govuk-summary-list__value  govuk-!-width-one-half">
-              {% if data['enforcement-identity'] == 'person' %}
-                Nic Davies
-              {% else %}
-                Providence Produce Company
-              {% endif %}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="confirm-remove?entity=person">
-                Remove<span class="govuk-visually-hidden"> this person</span>
-              </a>
-            </dd>
-          </div>
-
-        {% endif %}
-
-        <!-- company name if one is named -->
-        {% if data['enforcement-company-name'] %}
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-!-width-one-quarter">
-              Company
-            </dt>
-            <dd class="govuk-summary-list__value  govuk-!-width-one-half">
-              {{ data["enforcement-company-name"] or 'Providence Produce Company' }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="confirm-remove?entity=company">
-                Remove<span class="govuk-visually-hidden"> this company</span>
-              </a>
-            </dd>
-          </div>
-        {% endif %}
-
-
-      </dl>
-
-      <!-- <h2 class="govuk-heading-m">
-        Do you need to add another person?
-      </h2> -->
 
       {{ govukRadios({
         idPrefix: "enforcement-morepeople",
