Remove items from the names array

--- a/app/views/enforcement-listed-building/v1/named-on-notice/added-names.html
+++ b/app/views/enforcement-listed-building/v1/named-on-notice/added-names.html
@@ -46,7 +46,7 @@
             </a>
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#0">
+            <a class="govuk-link" href="remove-name/{{loop.index}}">
               Remove
             </a>
           </dd>
