--- a/app/views/lawful-development-certificate/v1/before-you-start/other.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/other.html
@@ -12,13 +12,15 @@
     <div class="govuk-grid-column-two-thirds">
       <form method="post">
 
+        <h1 class="govuk-heading-l">
+          Rest of the before you start
+        </h1>
+
+        <p>What other questions do we need to ask?</p>
+
         {{ govukButton({
           html: 'Continue'
         }) }}
-
-        <div class="team-questions">
-          <p>What other questions do we need to ask?</p>
-        </div>
 
       </form>
     </div>
