--- a/app/views/lawful-development-certificate/v1/question.html
+++ b/app/views/lawful-development-certificate/v1/question.html
@@ -14,4 +14,11 @@
   }) }}
 {% endblock %}
 
+{% block notes %}
+  {# <h2 class="govuk-heading-m">
+    Design notes
+  </h2>
+  <ul class="govuk-list"></ul> #}
+{% endblock %}
+
 {% block pageScripts %}{% endblock %}
