--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -81,6 +81,17 @@ $govuk-assets-path: '/govuk/assets/';
 	}
 }
 
+aside.notes {
+	h2 {
+		padding-top: govuk-spacing(2);
+		border-top: 4px solid govuk-colour("orange");
+	}
+
+	p, ul {
+		@include govuk-font($size: 16);
+	}
+}
+
 .loading {
 
 	&__container {
