--- a/app/views/lawful-development-certificate/v1/appeal-details/site-usage.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/site-usage.html
@@ -7,9 +7,12 @@
     value: data['site-usage'],
     rows: '5',
     label: {
-      html: 'Please state the actual use of the site at the time of application to the LPA.',
+      html: 'How is the site used?',
       classes: 'govuk-label--l',
       isPageHeading: true
+    },
+    hint: {
+      text: 'Please state the use of the site at the time of your application to the local planning authority.'
     }
   }) }}
 {% endblock %}
