--- a/app/views/lawful-development-certificate/v1/before-you-start/lpa.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/lpa.html
@@ -28,12 +28,12 @@
           id: 'lpa',
           name: 'lpa',
           label: {
-            html: 'Which local planning department dealt with your lawful development certificate?',
+            html: 'Which local planning authority dealt with your lawful development certificate?',
             classes: 'govuk-label--l',
             isPageHeading: true
           },
           hint: {
-            html: 'This is also known as your &lsquo;local planning authority&rsquo; or &lsquo;LPA&rsquo;'
+            html: 'This is also known as your &lsquo;local planning department&rsquo; or &lsquo;LPA&rsquo;'
           },
           items: lpaList,
           attributes: {
