--- a/app/views/lawful-development-certificate/v1/before-you-start/reason.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/reason.html
@@ -17,7 +17,7 @@
           name: 'reason',
           fieldset: {
             legend: {
-              html: 'The reason for the appeal is that the LPA has:',
+              html: 'The reason for the appeal is that the local planning authority has:',
               classes: 'govuk-fieldset__legend--l',
               isPageHeading: true
             }
@@ -29,9 +29,9 @@
               checked: checked('reason','Refused/refused in part to grant a certificate of lawful use or development.')
             },
             {
-              html: 'Failed to give notice of their decision within the appropriate period on an application for a certificate of lawful use or development.',
-              value: 'Failed to give notice of their decision within the appropriate period on an application for a certificate of lawful use or development.',
-              checked: checked('reason','Failed to give notice of their decision within the appropriate period on an application for a certificate of lawful use or development.')
+              html: 'Failed to give notice of their decision within 8 weeks (or 6 weeks for a listed building).',
+              value: 'Failed to give notice of their decision within 8 weeks (or 6 weeks for a listed building).',
+              checked: checked('reason','Failed to give notice of their decision within 8 weeks (or 6 weeks for a listed building).')
             }
           ]
         }) }}
