--- a/app/views/lawful-development-certificate/v1/before-you-start/section.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/section.html
@@ -25,7 +25,10 @@
       {
         html: 'Section 26H',
         value: 'Section 26H',
-        checked: checked('section','Section 26H')
+        checked: checked('section','Section 26H'),
+        hint: {
+          html: 'Ny: applications to be made in order for the applicant to ascertain whether proposed works for the alteration or extension of a listed building would be lawful.'
+        }
       }
     ]
   }) }}
