--- a/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
+++ b/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
@@ -44,7 +44,7 @@
   </h2>
   <ul class="govuk-list">
     <li>
-      Enforcements have removed this, do we need it?
+      Do we need the agents company name?
     </li>
   </ul>
 {% endblock %}
