--- a/app/views/lawful-development-certificate/v1/contact-details/index.html
+++ b/app/views/lawful-development-certificate/v1/contact-details/index.html
@@ -31,17 +31,12 @@
 {% endblock %}
 
 {% block notes %}
-  <h2 class="govuk-heading-m">
+  {# <h2 class="govuk-heading-m">
     Design notes
   </h2>
   <ul class="govuk-list">
-    <li>
-      Do we need to ask if they&rsquo;re an agent? (see enforcements)
-    </li>
-    <li>
-      Should this ask about company or person? (see enforcements)
-    </li>
-  </ul>
+    <li></li>
+  </ul> #}
 {% endblock %}
 
 {% block pageScripts %}{% endblock %}
