--- a/app/views/lawful-development-certificate/v1/site-details/health-and-safety.html
+++ b/app/views/lawful-development-certificate/v1/site-details/health-and-safety.html
@@ -25,7 +25,7 @@
       }
     },
     hint: {
-      html: '<p>The appeal site is the area of property or land that your original planning application relates to.</p><p>Tell us about any health and safety issues on the appeal site in case an Inspector needs to carry out a site visit.</p>'
+      text: 'Understanding any health and safety issues, will help an inspector carry out a site visit.'
     },
     items: [
       {
@@ -66,17 +66,12 @@
 {% endblock %}
 
 {% block notes %}
-  <h2 class="govuk-heading-m">
+  {# <h2 class="govuk-heading-m">
     Design notes
   </h2>
   <ul class="govuk-list">
-    <li>
-      Can one of the hints (at least) be incorporated into the question text?
-    </li>
-    <li>
-      Details should be below inputs, moved.
-    </li>
-  </ul>
+    <li></li>
+  </ul> #}
 {% endblock %}
 
 {% block pageScripts %}{% endblock %}
