--- a/app/views/lawful-development-certificate/v1/appeal-details/enforcement-notice.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/enforcement-notice.html
@@ -6,7 +6,7 @@
     name: 'enforcemnet-notice',
     fieldset: {
       legend: {
-        html: 'Is there an effective enforcement notice on the site?',
+        html: 'Has an enforcement notice been issued for this site?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
@@ -27,14 +27,14 @@
 {% endblock %}
 
 {% block notes %}
-  {# <h2 class="govuk-heading-m">
+  <h2 class="govuk-heading-m">
     Design notes
   </h2>
   <ul class="govuk-list">
     <li>
-
+      Should this be before you start? Does it stop the appeal?
     </li>
-  </ul> #}
+  </ul>
 {% endblock %}
 
 {% block pageScripts %}{% endblock %}
