--- a/app/views/lawful-development-certificate/v1/before-you-start/index.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/index.html
@@ -15,12 +15,12 @@
         <h1 class="govuk-heading-l">
           Before you start
         </h1>
-        <p>This is a new service. Itrsquo;s only for appeals about certain local planning departments and planning application types.</p>
+        <p>This is a new service. It&rsquo;s only for appeals about certain local planning departments and planning application types.</p>
 
         <h2 class="govuk-heading-m">
           Check if you can use this service
         </h2>
-        <p>Before you start, wersquo;ll check if you can use this service by asking some questions about your appeal.</p>
+        <p>Before you start, we&rsquo;ll check if you can use this service by asking some questions about your appeal.</p>
 
         <p>If you cannot use this service, you can still appeal using the existing service.</p>
 
