--- a/app/views/lawful-development-certificate/v1/uploads/appeal-statement.html
+++ b/app/views/lawful-development-certificate/v1/uploads/appeal-statement.html
@@ -5,9 +5,44 @@
     Upload your appeal statement
   </h1>
 
-  <p>Your appeal statement explains why you think the local planning department&rsquo;s decision was incorrect.</p>
+  <p>Your appeal statement explains why you disagree with the local planning authority&rsquo;s decision. </p>
 
   <p>If you refer to any documents in your appeal statement, for example photographs, you can upload them in the next step.</p>
+
+  {% set uploadHtml %}
+    {{ govukFileUpload({
+      id: "appeal-statement",
+      name: "appeal-statement",
+      classes: 'moj-multi-file-upload__input',
+      label: {
+        text: "Upload a file",
+        classes: 'govuk-label--m'
+      },
+      hint: {
+        text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
+      }
+    }) }}
+
+    {{govukButton({
+      text: 'Upload file',
+      classes: 'govuk-button--secondary moj-multi-file-upload__button'
+    })}}
+  {% endset %}
+
+  {{ mojMultiFileUpload({
+    uploadedFiles: {
+      heading: { text: 'File added' },
+      items: []
+    },
+    uploadHtml: uploadHtml
+  }) }}
+
+
+
+
+  <h2 class="govuk-heading-m govuk-!-margin-top-9">
+    Sensitive information
+  </h2>
 
   <p>You cannot include any sensitive information in your statement. If you do, you&rsquo;ll be asked to resubmit, which will delay your appeal.</p>
 
@@ -40,38 +75,10 @@
     html: sensitiveHTML
   }) }}
 
-  {% set uploadHtml %}
-    {{ govukFileUpload({
-      id: "appeal-statement",
-      name: "appeal-statement",
-      classes: 'moj-multi-file-upload__input',
-      label: {
-        text: "Upload a file",
-        classes: 'govuk-label--m'
-      },
-      hint: {
-        text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
-      }
-    }) }}
-
-    {{govukButton({
-      text: 'Upload file',
-      classes: 'govuk-button--secondary moj-multi-file-upload__button'
-    })}}
-  {% endset %}
-
-  {{ mojMultiFileUpload({
-    uploadedFiles: {
-      heading: { text: 'File added' },
-      items: []
-    },
-    uploadHtml: uploadHtml
-  }) }}
-
   {{ govukCheckboxes({
     idPrefix: 'appeal-statement-confirmation',
     name: 'appeal-statement-confirmation',
-    classes: 'govuk-!-margin-top-9',
+    classes: 'checkboxes-long-text',
     items: [
       {
         html: 'I confirm that I have not included any sensitive information in my appeal statement.',
@@ -89,12 +96,6 @@
   <ul class="govuk-list">
     <li>
       Is upload the best way to get this, what info do we need? (see enf notice)
-    </li>
-    <li>
-      Removed some of the repeated info in the sensitive info details
-    </li>
-    <li>
-      Do we have to have a checkbox for the sensitive info, we&rsquo;ve already explained the repercussions, this would usually be used for legal ramifications
     </li>
   </ul>
 {% endblock %}
