--- a/app/views/lawful-development-certificate/v1/uploads/application.html
+++ b/app/views/lawful-development-certificate/v1/uploads/application.html
@@ -2,7 +2,7 @@
 
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Upload your application made to the LPA
+    Upload your application made to the local planning authority
   </h1>
 
   <p>If you do not have your application form, you can find it by searching for your applications on your local planning department&rsquo;s website.</p>
@@ -37,17 +37,12 @@
 {% endblock %}
 
 {% block notes %}
-  <h2 class="govuk-heading-m">
+  {# <h2 class="govuk-heading-m">
     Design notes
   </h2>
   <ul class="govuk-list">
-    <li>
-      Removed reference to &ldquo;planning application&rdquo;
-    </li>
-    <li>
-      Should we replace the acronym?
-    </li>
-  </ul>
+    <li></li>
+  </ul> #}
 {% endblock %}
 
 {% block pageScripts %}
