More content tweaks

--- a/app/views/lawful-development-certificate/v1/before-you-start/cya.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/cya.html
@@ -79,7 +79,7 @@
                 text: 'Section'
               },
               value: {
-                text: data['section'] | replace('Section ', '') or '192'
+                text: data['section'] or '192'
               },
               actions: {
                 items: [
