--- a/app/views/lawful-development-certificate/v1/cya/index.html
+++ b/app/views/lawful-development-certificate/v1/cya/index.html
@@ -12,13 +12,14 @@ gov {% extends "layout.html" %}
 
       <h2 class="govuk-heading-m">Declaration</h2>
 
-      <p class="govuk-!-margin-bottom-2">By submitting this appeal you are confirming that:</p>
+      <p class="govuk-!-margin-bottom-2">By submitting your appeal, you confirm you understand that:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>to the best of your knowledge, the details you are providing are correct</li>
         <li>this is your only opportunity to submit the appeal</li>
         <li>if you have not included all the information we’ve requested, we may not be able to progress your appeal</li>
         <li>you can change your statement up to 6 weeks after submitting your appeal. To do this, contact enquiries@planninginspectorate.gov.uk</li>
       </ul>
+
+      <p>You also confirm that, to the best of your knowledge, the details you are providing are correct.</p>
 
       <div class="govuk-button-group">
         {{ govukButton({
