--- a/app/views/lawful-development-certificate/v1/uploads/decision-letter.html
+++ b/app/views/lawful-development-certificate/v1/uploads/decision-letter.html
@@ -5,7 +5,7 @@
     Upload the decision letter from the local planning authority
   </h1>
 
-  <p>This is the letter from the local planning authority telling you about the decision on your application.</p>
+  <p>This is the letter telling you about the decision on your application.</p>
 
   {% set uploadHtml %}
     {{ govukFileUpload({
