--- a/app/views/lawful-development-certificate/v1/uploads/application.html
+++ b/app/views/lawful-development-certificate/v1/uploads/application.html
@@ -5,7 +5,7 @@
     Upload your application made to the local planning authority
   </h1>
 
-  <p>If you do not have your application form, you can find it by searching for your applications on your local planning department&rsquo;s website.</p>
+  <p>If you do not have your application form, you can find it by searching for your applications on your local planning authority&rsquo;s website.</p>
 
   {% set uploadHtml %}
     {{ govukFileUpload({
