Fixed optional date display

--- a/app/views/lawful-development-certificate/v1/before-you-start/cya.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/cya.html
@@ -105,7 +105,7 @@
                   }
                 ]
               }
-            } if data['section'] == 'Section 26H'
+            } if data['section'] == '26H'
           ]
         }) }}
 
