Added a question about one of the pages

--- a/app/views/lawful-development-certificate/v1/appeal-details/index.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/index.html
@@ -15,14 +15,14 @@
 {% endblock %}
 
 {% block notes %}
-  {# <h2 class="govuk-heading-m">
+  <h2 class="govuk-heading-m">
     Design notes
   </h2>
   <ul class="govuk-list">
     <li>
-
+      If they upload the application, why do we need to ask this?
     </li>
-  </ul> #}
+  </ul>
 {% endblock %}
 
 {% block pageScripts %}{% endblock %}
