--- a/app/views/lawful-development-certificate/v1/before-you-start/section.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/section.html
@@ -13,17 +13,17 @@
     },
     items: [
       {
-        html: 'Section 191 &ndash; the existing use, operations or activity is legal',
+        html: 'Section 191: the existing use, operations or activity is legal',
         value: '191',
         checked: checked('section','191')
       },
       {
-        html: 'Section 192 &ndash; the proposed use, operations or activity is legal',
+        html: 'Section 192: the proposed use, operations or activity is legal',
         value: '192',
         checked: checked('section','192')
       },
       {
-        html: 'Section 26H &ndash; the proposed work to a listed building is legal',
+        html: 'Section 26H: the proposed work to a listed building is legal',
         value: '26H',
         checked: checked('section','26H')
       }
