--- a/app/views/lawful-development-certificate/v1/appeal-details/index.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/index.html
@@ -7,7 +7,7 @@
     value: data['appeal-details'],
     rows: '5',
     label: {
-      html: 'What&rsquo;s the proposed or existing use, operation or activity as outlined in your application',
+      html: 'What&rsquo;s the proposed or existing use, operation or activity as outlined in your application?',
       classes: 'govuk-label--l',
       isPageHeading: true
     }
