--- a/app/views/lawful-development-certificate/v1/appeal-details/proposal.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/proposal.html
@@ -6,7 +6,7 @@
     name: 'proposal',
     fieldset: {
       legend: {
-        html: 'In the case of a proposal, had it been started before the application to the LPA was made?',
+        html: 'In the case of a proposal, had it been started before the application to the local planning authority was made?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
@@ -27,14 +27,17 @@
 {% endblock %}
 
 {% block notes %}
-  {# <h2 class="govuk-heading-m">
+  <h2 class="govuk-heading-m">
     Design notes
   </h2>
   <ul class="govuk-list">
     <li>
-
+      What does this mean? What is a proposal?
     </li>
-  </ul> #}
+    <li>
+      What repercussions does this have?
+    </li>
+  </ul>
 {% endblock %}
 
 {% block pageScripts %}{% endblock %}
