--- a/app/views/lawful-development-certificate/v1/appeal-details/site-usage.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/site-usage.html
@@ -12,7 +12,7 @@
       isPageHeading: true
     },
     hint: {
-      text: 'Please state the use of the site at the time of your application to the local planning authority.'
+      text: 'Tell us the use of the site at the time of your application.'
     }
   }) }}
 {% endblock %}
