--- a/app/views/lawful-development-certificate/v1/before-you-start/date.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/date.html
@@ -17,7 +17,7 @@
           namePrefix: 'decision-date',
           fieldset: {
             legend: {
-              html: 'What&rsquo;s the decision date on the letter from the local planning department?​',
+              html: 'What&rsquo;s the decision date on the letter from the local planning authority?​',
               classes: 'govuk-fieldset__legend--l',
               isPageHeading: true
             }
