--- a/app/views/lawful-development-certificate/v1/cya/index.html
+++ b/app/views/lawful-development-certificate/v1/cya/index.html
@@ -16,7 +16,7 @@ gov {% extends "layout.html" %}
       <ul class="govuk-list govuk-list--bullet">
         <li>this is your only opportunity to submit the appeal</li>
         <li>if you have not included all the information we’ve requested, we may not be able to progress your appeal</li>
-        <li>you can change your statement up to 6 weeks after submitting your appeal. To do this, contact enquiries@planninginspectorate.gov.uk</li>
+        <li>you can change your statement up to 6 weeks after submitting your appeal, we&rsquo;ll email you a link to do this</li>
       </ul>
 
       <p>You also confirm that, to the best of your knowledge, the details you are providing are correct.</p>
