--- a/app/views/lawful-development-certificate/v1/uploads/common-ground.html
+++ b/app/views/lawful-development-certificate/v1/uploads/common-ground.html
@@ -40,13 +40,7 @@
   </h2>
   <ul class="govuk-list">
     <li>
-      Is this needed for LDC?
-    </li>
-    <li>
-      Is upload the best way to get this, what info do we need?
-    </li>
-    <li>
-      Can we at least add some guidance?
+      This needs hint text, but what do we need to tell them?
     </li>
   </ul>
 {% endblock %}
