--- a/app/views/lawful-development-certificate/v1/uploads/plans.html
+++ b/app/views/lawful-development-certificate/v1/uploads/plans.html
@@ -2,10 +2,8 @@
 
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Upload your plans, drawings and supporting documents
+    Upload your plans, drawings and supporting documents you submitted with your application
   </h1>
-
-  <p>Upload the plans, drawings and supporting documents you submitted with your application.</p>
 
   <p>Do not include any new or updated documents. We&rsquo;ll ask for these later.</p>
 
