CYA route and grid tweak

--- a/app/views/lawful-development-certificate/v1/_layout.html
+++ b/app/views/lawful-development-certificate/v1/_layout.html
@@ -9,7 +9,7 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-three-quarters govuk-grid-column-two-thirds-from-desktop">
 
       <form method="post">
 
@@ -98,7 +98,7 @@
 
     </div>
 
-    <div class="govuk-grid-column-one-third">
+    <div class="govuk-grid-column-three-quarters govuk-grid-column-one-third-from-desktop">
       <aside class="notes">
         {% block notes %}{% endblock %}
       </aside>
