--- a/app/views/lawful-development-certificate/v1/cya/index.html
+++ b/app/views/lawful-development-certificate/v1/cya/index.html
@@ -2,13 +2,34 @@ gov {% extends "layout.html" %}
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-two-thirds-from-desktop">
 
       <h1 class="govuk-heading-l">
         Check your answers before submitting your appeal
       </h1>
 
-      <p class="govuk-!-margin-top-9 govuk-!-margin-bottom-9">[answers]</p>
+      {{ govukSummaryList({
+        classes: '',
+        rows: [
+          {
+            key: {
+              text: 'Your name'
+            },
+            value: {
+              text: 'Chris Armstrong'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../contact-details/appelant-name?cya=true',
+                  text: 'Change',
+                  visuallyHiddenText: 'Your name'
+                }
+              ]
+            }
+          }
+        ]
+      }) }}
 
       <h2 class="govuk-heading-m">Declaration</h2>
 
