CYA and fixed uploads playback

--- a/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
+++ b/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
@@ -10,9 +10,9 @@
   }) %}
 
     {{ govukInput({
-      id: 'appelant-first-name',
-      name: 'appelant-first-name',
-      value: data['appelant-first-name'],
+      id: 'agent-first-name',
+      name: 'agent-first-name',
+      value: data['agent-first-name'],
       classes: 'govuk-!-width-three-quarters',
       label: {
         html: 'First name'
@@ -22,9 +22,9 @@
     }) }}
 
     {{ govukInput({
-      id: 'appelant-last-name',
-      name: 'appelant-last-name',
-      value: data['appelant-last-name'],
+      id: 'agent-last-name',
+      name: 'agent-last-name',
+      value: data['agent-last-name'],
       classes: 'govuk-!-width-three-quarters',
       label: {
         html: 'Last name'
