--- a/app/views/lawful-development-certificate/v1/site-details/site-visibility.html
+++ b/app/views/lawful-development-certificate/v1/site-details/site-visibility.html
@@ -3,9 +3,9 @@
 {% block questions %}
   {% set detailsHTML %}
     {{ govukTextarea({
-      name: 'visibilityDetails',
-      id: 'visibilityDetails',
-      value: data['visibilityDetails'],
+      name: 'site-visibility__details',
+      id: 'site-visibility__details',
+      value: data['site-visibility__details'],
       rows: '5',
       label: {
         html: 'How is visibility restricted?'
