--- a/app/views/lawful-development-certificate/v1/cya/index.html
+++ b/app/views/lawful-development-certificate/v1/cya/index.html
@@ -1,4 +1,6 @@
-gov {% extends "layout.html" %}
+{% extends "layout.html" %}
+
+{% set decisionDate = (data['decision-date-day'] or '1') +' '+ (data['decision-date-month'] | formatMonth or 'July') +' '+ (data['decision-date-year'] or '2022') %}
 
 {% block content %}
   <div class="govuk-grid-row">
@@ -8,22 +10,365 @@ gov {% extends "layout.html" %}
         Check your answers before submitting your appeal
       </h1>
 
+      <h2 class="govuk-heading-m">
+        Check you can use this service
+      </h2>
+
       {{ govukSummaryList({
-        classes: '',
+        classes: 'govuk-summary-list--no-border govuk-!-margin-bottom-9',
         rows: [
           {
             key: {
-              text: 'Your name'
+              html: 'Appealing'
             },
             value: {
-              text: 'Chris Armstrong'
+              html: 'A lawful development certificate (LDC)'
+            }
+          },
+          {
+            key: {
+              html: 'Local planning authority'
+            },
+            value: {
+              html: data['lpa'] or 'Bradford'
+            }
+          },
+          {
+            key: {
+              html: 'Reason for appeal'
+            },
+            value: {
+              html: data['reason'] or 'Refused/refused in part to grant a certificate of lawful use or development.'
+            }
+          },
+          {
+            key: {
+              html: 'Section'
+            },
+            value: {
+              html: data['section'] or '192'
+            }
+          },
+          {
+            key: {
+              html: 'Decision date'
+            },
+            value: {
+              html: decisionDate
+            }
+          } if data['section'] == '26H'
+        ]
+      }) }}
+
+
+
+      <h2 class="govuk-heading-m">
+        Appeal details
+      </h2>
+
+      {{ govukSummaryList({
+        classes: 'govuk-!-margin-bottom-9',
+        rows: [
+          {
+            key: {
+              html: 'Application in your name'
+            },
+            value: {
+              html: data['appelant-check'] or 'Yes'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../contact-details/?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Applicant&rsquo;s name' if data['appelant-check'] == 'No' else 'Your name'
+            },
+            value: {
+              html: (data['appelant-first-name']+' '+data['appelant-last-name'] if data['appelant-first-name'] else 'Liz Windsor')+('<br>'+data['appelant-company-name'] if data['appelant-company-name'])
             },
             actions: {
               items: [
                 {
                   href: '../contact-details/appelant-name?cya=true',
-                  text: 'Change',
-                  visuallyHiddenText: 'Your name'
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Your name'
+            },
+            value: {
+              html: data['agent-first-name']+' '+data['agent-last-name'] if data['agent-first-name'] else 'Chris Armstrong'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../contact-details/appelant-name?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          } if data['appelant-check'] == 'No',
+          {
+            key: {
+              html: 'Site address'
+            },
+            value: {
+              html: (data['address-line-1'] or 'Buckingham Palace')+('<br>'+data['address-line-2'] if data['address-line-2'])+('<br>'+(data['address-town'] or 'London'))+('<br>'+(data['address-postcode'] or 'SW1A 1AA'))
+            },
+            actions: {
+              items: [
+                {
+                  href: '../site-details/?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Site visible'
+            },
+            value: {
+              html: 'No<br>'+data['site-visibilityy__details'] if data['site-visibilityy'] == 'No' else 'Yes'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../site-details/site-visibility?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Site health and safety issues'
+            },
+            value: {
+              html: 'Yes<br>'+data['health-and-safety__details'] if data['health-and-safety'] == 'Yes' else 'No'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../site-details/health-and-safety?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Proposed or existing use, operation or activity'
+            },
+            value: {
+              html: data['appeal-details'] or 'Theme park'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../appeal-details/?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Site usage'
+            },
+            value: {
+              html: data['site-usage'] or 'Home for the Queen'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../appeal-details/site-usage?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Enforcement notice'
+            },
+            value: {
+              html: data['enforcemnet-notice'] or 'No'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../appeal-details/enforcement-notice?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Appeal procedure'
+            },
+            value: {
+              html: data['procedure'] or 'Written representations'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../appeal-details/procedure?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: data['procedure']+' reasons'
+            },
+            value: {
+              html: data['procedure-reason'] or 'My reasons…'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../appeal-details/procedure--reason?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          } if data['procedure'] == 'Inquiry' or data['procedure'] == 'Hearing',
+          {
+            key: {
+              html: 'Inquiry length'
+            },
+            value: {
+              html: (data['procedure-lenth'] or '5')+' days'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../appeal-details/procedure--length?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          } if data['procedure'] == 'Inquiry',
+          {
+            key: {
+              html: 'Draft statement of common ground'
+            },
+            value: {
+              html: data['common-ground'] | join('<br>') if data['common-ground'] else 'common-ground.pdf'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../uploads/common-ground?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Appeal statement'
+            },
+            value: {
+              html: data['appeal-statement'] | join('<br>') if data['appeal-statement'] else 'appeal-statement.pdf'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../uploads/appeal-statement?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Original application'
+            },
+            value: {
+              html: data['application'] | join('<br>') if data['application'] else 'application.pdf'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../uploads/application?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Plans, drawings and supporting documents'
+            },
+            value: {
+              html: data['plans'] | join('<br>') if data['plans'] else 'plans.pdf'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../uploads/plans?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Decision letter'
+            },
+            value: {
+              html: data['decision-letter'] | join('<br>') if data['decision-letter'] else 'decision-letter.pdf'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../uploads/decision-letter?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Add new plans or drawings'
+            },
+            value: {
+              html: data['new-plans-check'] or 'No'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../uploads/new-plans-check?cya=true',
+                  html: 'Change'
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              html: 'Add new supporting documents'
+            },
+            value: {
+              html: data['other-check'] or 'No'
+            },
+            actions: {
+              items: [
+                {
+                  href: '../uploads/other-check?cya=true',
+                  html: 'Change'
                 }
               ]
             }
