--- a/app/views/lawful-development-certificate/v1/uploads/application.html
+++ b/app/views/lawful-development-certificate/v1/uploads/application.html
@@ -61,7 +61,7 @@
 
 
     // I really should learn how the MOJ upload works, however, a hack to get all the files passed into data
-    $('#multiupload').submit(function(e) {
+    $('form').submit(function(e) {
       e.preventDefault();
 
       $('.moj-multi-file-upload__filename').each(function() {
