--- a/app/views/lawful-development-certificate/v1/uploads/plans.html
+++ b/app/views/lawful-development-certificate/v1/uploads/plans.html
@@ -49,7 +49,7 @@
 {% block pageScripts %}
   <script>
     // I really should learn how the MOJ upload works, however, a hack to get all the files passed into data
-    $('#multiupload').submit(function(e) {
+    $('form').submit(function(e) {
       e.preventDefault();
 
       $('.moj-multi-file-upload__filename').each(function() {
