Added witnesses, updated contact details

--- a/app/views/lawful-development-certificate/v1/appeal-details/enforcement-notice.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/enforcement-notice.html
@@ -25,7 +25,7 @@
     ]
   }) }}
 {% endblock %}
-
+{#
 {% block notes %}
   <h2 class="govuk-heading-m">
     Design notes
@@ -35,6 +35,6 @@
       Should this be before you start? Does it stop the appeal?
     </li>
   </ul>
-{% endblock %}
+{% endblock %} #}
 
 {% block pageScripts %}{% endblock %}
