--- a/app/views/lawful-development-certificate/v1/appeal-details/index.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/index.html
@@ -14,7 +14,7 @@
   }) }}
 {% endblock %}
 
-{% block notes %}
+{# {% block notes %}
   <h2 class="govuk-heading-m">
     Design notes
   </h2>
@@ -23,6 +23,6 @@
       If they upload the application, why do we need to ask this?
     </li>
   </ul>
-{% endblock %}
+{% endblock %} #}
 
 {% block pageScripts %}{% endblock %}
