--- a/app/views/lawful-development-certificate/v1/site-details/index.html
+++ b/app/views/lawful-development-certificate/v1/site-details/index.html
@@ -54,7 +54,7 @@
   {% endcall %}
 {% endblock %}
 
-{% block notes %}
+{# {% block notes %}
   <h2 class="govuk-heading-m">
     Design notes
   </h2>
@@ -66,6 +66,6 @@
       County is usually not needed (confirmed by Post Office) can we remove?
     </li>
   </ul>
-{% endblock %}
+{% endblock %} #}
 
 {% block pageScripts %}{% endblock %}
