--- a/app/views/lawful-development-certificate/v1/site-details/site-visibility.html
+++ b/app/views/lawful-development-certificate/v1/site-details/site-visibility.html
@@ -45,7 +45,7 @@
   }) }}
 {% endblock %}
 
-{% block notes %}
+{# {% block notes %}
   <h2 class="govuk-heading-m">
     Design notes
   </h2>
@@ -54,6 +54,6 @@
       Used updated content from enforcements, rather than full.
     </li>
   </ul>
-{% endblock %}
+{% endblock %} #}
 
 {% block pageScripts %}{% endblock %}
