--- a/app/views/lawful-development-certificate/v1/uploads/decision-letter.html
+++ b/app/views/lawful-development-certificate/v1/uploads/decision-letter.html
@@ -36,7 +36,7 @@
   }) }}
 {% endblock %}
 
-{% block notes %}
+{# {% block notes %}
   <h2 class="govuk-heading-m">
     Design notes
   </h2>
@@ -48,7 +48,7 @@
       Heard that what we want is the notice part of the letter which might be separate, how can we say this clearly?
     </li>
   </ul>
-{% endblock %}
+{% endblock %} #}
 
 {% block pageScripts %}
   <script>
