--- a/app/views/lawful-development-certificate/v1/appeal-details/index.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/index.html
@@ -1,28 +1,31 @@
 {% extends location+"_layout.html" %}
 
 {% block questions %}
-  {{ govukTextarea({
-    name: 'appeal-details',
-    id: 'appeal-details',
-    value: data['appeal-details'],
-    rows: '5',
+  {{ govukInput({
+    id: 'lpa-reference',
+    name: 'lpa-reference',
+    value: data['lpa-reference'],
+    classes: 'govuk-!-width-two-thirds',
     label: {
-      html: 'What&rsquo;s the proposed or existing use, operation or activity as outlined in your application?',
+      html: 'What&rsquo;s your application number?',
       classes: 'govuk-label--l',
       isPageHeading: true
+    },
+    hint: {
+      html: 'You can find this on the decision letter from your local planning department'
     }
   }) }}
 {% endblock %}
 
-{# {% block notes %}
-  <h2 class="govuk-heading-m">
+{% block notes %}
+  {# <h2 class="govuk-heading-m">
     Design notes
   </h2>
   <ul class="govuk-list">
     <li>
-      If they upload the application, why do we need to ask this?
+
     </li>
-  </ul>
-{% endblock %} #}
+  </ul> #}
+{% endblock %}
 
 {% block pageScripts %}{% endblock %}
